# nexus-link

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  devbox.json  install.sh  opencode.json.bkp  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  integration.yml  release.yml
crates/nexus-link-agent/: Cargo.toml
crates/nexus-link-agent/src/: collector.rs  main.rs  pusher.rs
crates/nexus-link-cli/: Cargo.toml
crates/nexus-link-cli/src/: main.rs
crates/nexus-link-cli/src/commands/: agent.rs  config.rs  mod.rs  refresh.rs  refresh_cmd.rs  register.rs  reset.rs  status.rs  unregister.rs  upgrade.rs
crates/nexus-link-core/: Cargo.toml
crates/nexus-link-core/src/: config.rs  error.rs  lib.rs  network.rs  preflight.rs  telemetry.rs  token.rs  types.rs
crates/nexus-link-service/: Cargo.toml
crates/nexus-link-service/src/: main.rs  poller.rs  state.rs
crates/nexus-link-service/src/handlers/: commands.rs  compose.rs  mod.rs
crates/nexus-link-service/src/middleware/: auth.rs  cmd_auth.rs  mod.rs
docker/: Dockerfile.native  Dockerfile.release  Dockerfile.service
hooks/: pre-commit
scripts/devbox/: dbx_post_init.sh
tests/: Cargo.toml
tests/src/: config_tests.rs  error_tests.rs  lib.rs  preflight_tests.rs  telemetry_tests.rs  token_tests.rs  types_tests.rs
