[package]
name = "nexus-link-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Telemetry push daemon for nexus-link"

[[bin]]
name = "nexus-link-agent"
path = "src/main.rs"

[dependencies]
nexus-link-core = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
bollard = { workspace = true }
sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
