[package]
name = "nexus-link-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Axum HTTP server for receiving commands from Nexus backend"

[[bin]]
name = "nexus-link-service"
path = "src/main.rs"

[dependencies]
nexus-link-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
bollard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
